# rimregisteret

./: .gitattributes  .gitignore  .railwayignore  .vercelignore  README.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  serve.py  vercel.json
api/: main.py
data/db/: definisjoner.db  rimindeks.db  semantics.db
frontend/: api.html  index.html  om.html
mcp/: README.md  rimregisteret_mcp.py
rimordbok/: __init__.py  akustisk.py  clusters.py  db.py  definitions.py  g2p.py  phonetics.py  rhyme.py  semantics.py
scripts/: build_crosslingual_antonyms.py  build_frequencies.py  build_homophones.py  build_morphological_antonyms.py  build_rhyme_index.py  build_rimsti_index.py  parse_conceptnet.py  parse_phonetics.py  parse_wiktionary.py  parse_wordnet.py  update_frequencies.py
skills/rimregisteret/: README.md  SKILL.md
tests/: DIALEKT_EKSEMPLER.md  TESTRESULTATER.md  test_api.py  test_clusters.py  test_dialect.py  test_frequencies.py  test_g2p.py  test_integration.py  test_parser.py  test_rhyme.py  test_rhyme_index.py  test_rimsti.py  test_semantics.py
