[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rimordbok"
version = "0.1.0"
description = "Norsk rimordbok"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["rimordbok*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
