[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rimregisteret"
version = "0.1.0"
description = "Rimregisteret — norsk rimordbok med fonetikk, semantikk og ordfrekvens"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["rimordbok*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
